--- a/Quiet/Quiet/Global/Resources/Storyboard/Base.lproj/Main.storyboard
+++ b/Quiet/Quiet/Global/Resources/Storyboard/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21219" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="zye-qo-EVb">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21219" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="0tk-k3-xjx">
     <device id="retina6_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -40,6 +40,22 @@
             </objects>
             <point key="canvasLocation" x="2070.7692307692305" y="-2.1327014218009479"/>
         </scene>
+        <!--Search Result View Controller-->
+        <scene sceneID="D6u-de-beT">
+            <objects>
+                <viewController storyboardIdentifier="SearchResultViewController" id="EUs-ZY-pja" customClass="SearchResultViewController" customModule="Quiet" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="KSo-Bd-mQf">
+                        <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="Aeu-i1-iyN"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="lXh-rA-8VO"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="OOd-L5-VGZ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2069" y="724"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="XSM-Q0-AZ9">
             <objects>
@@ -57,6 +73,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ufJ-IT-eEg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1141.5384615384614" y="-2.1327014218009479"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ved-Xp-RgD">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="0tk-k3-xjx" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="0ne-sy-sHL">
+                        <rect key="frame" x="0.0" y="47" width="390" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="EUs-ZY-pja" kind="relationship" relationship="rootViewController" id="jwP-Nt-3ea"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Vd3-uL-3eB" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1142" y="724"/>
         </scene>
     </scenes>
     <resources>
